horizontal scroll fixed!

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,22 @@
 body {
   font-family: sans-serif;
 }
-@media all  and (max-width:991px){
+@media all and (max-width:575px){
+
+  .scrolling-bg{
+
+    display: block;
+    height: 590px;
+    background-repeat: no-repeat;
+    background-attachment: fixed ;
+    background-image: url(../images/scroll.jpeg);
+    
+    
+    
+  }
+
+}
+@media all  and (min-width:576px) and (max-width:991px){
 
   .navbar {
     width: 100%;
@@ -32,8 +47,19 @@ body {
     background-color: rgb(117, 221, 244) ;
    
   }
+  .scrolling-bg{
+
+    display: block;
+    height: 590px;
+    background-repeat: no-repeat;
+    background-attachment: fixed ;
+    background-image: url(../images/scroll.jpeg);
+    
+    
+    
+  }
 }
-@media all and (min-width:991px) and (max-width:1199px) {
+@media all and (min-width:992px) and (max-width:1199px) {
   .navbar {
     width: 94%;
     position: absolute;
@@ -63,6 +89,17 @@ body {
   font-size: small;
   background-color: rgb(117, 221, 244) ;
  
+}
+.scrolling-bg{
+
+  display: block;
+  height: 230px;
+  background-repeat: no-repeat;
+  background-attachment: fixed ;
+  background-image: url(../images/scroll.jpeg);
+  
+  
+  
 }
 }
 
@@ -98,6 +135,17 @@ body {
   font-size: small;
   background-color: rgb(117, 221, 244) ;
  
+}
+.scrolling-bg{
+
+  display: block;
+  height: 230px;
+  background-repeat: no-repeat;
+  background-attachment: fixed ;
+  background-image: url(../images/scroll.jpeg);
+  
+  
+  
 }
 }
 
@@ -175,8 +223,6 @@ body {
 
 .form-bg {
 
-  width: 30rem;
-  height: 45rem;
   background-image: linear-gradient(to bottom right, rgba(255, 238, 225, 1), rgb(63, 225, 209));
 }
 
@@ -199,6 +245,7 @@ body {
   font-size: medium;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
 
 .Dc-heading-card {
   
